# memory-layer

./: .env.example  .gitignore  .mcp.json  LICENSE  Makefile  README.md  pyproject.toml
src/memory_layer/: config.py  main.py
src/memory_layer/api/: dependencies.py  middleware.py
src/memory_layer/api/v1/: admin.py  auth.py  graph.py  health.py  ingest.py  keys.py  query.py  (+1 more)
src/memory_layer/core/: auth.py  key_manager.py  reasoning_bridge.py  security.py  user_manager.py
src/memory_layer/extraction/: edge_extractor.py  node_extractor.py  pipeline.py  prompts.py  spacy_config.py  validators.py
src/memory_layer/graph/: __init__.py  driver.py  indexes.py  queries.py  repository.py  schemas.py  transactions.py
src/memory_layer/integrity/: __init__.py  checker.py  prompts.py  resolver.py
src/memory_layer/langgraph/: edges.py  graphs.py  nodes.py  states.py
src/memory_layer/llm/: anthropic_client.py  base.py  google_client.py  openai_client.py  rate_limiter.py  router.py
src/memory_layer/mcp/: auth.py  server.py  tools.py
src/memory_layer/models/: auth.py  common.py  graph.py  ingest.py  keys.py  mcp.py  query.py
src/memory_layer/retrieval/: __init__.py  context_window.py  engine.py  ranking.py  serializer.py  traversal.py
src/memory_layer/sleep/: consolidator.py  prompts.py  pruner.py  scheduler.py
src/memory_layer/tasks/: definitions.py  worker.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_api_health.py
tests/unit/: test_auth.py  test_config.py  test_models.py  test_rate_limiter.py  test_security.py
