[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-layer"
version = "0.1.0"
description = "BYOAK Universal Memory Platform — model-agnostic, stateful memory via Knowledge Graph"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "CC-BY-NC-4.0"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.5.0",
    "neo4j>=5.25.0",
    "cryptography>=43.0.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "openai>=1.50.0",
    "anthropic>=0.37.0",
    "google-genai>=1.0.0",
    "spacy>=3.7.0",
    "spacy-llm>=0.7.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "mcp[cli]>=1.1.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "tiktoken>=0.8.0",
    "structlog>=24.4.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memory_layer"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
